LK/parser.output
Terminals unused in grammar

    DO
    ARRAY_COMMAS


State 11 conflicts: 1 shift/reduce, 1 reduce/reduce
State 12 conflicts: 1 shift/reduce, 2 reduce/reduce
State 25 conflicts: 1 shift/reduce, 1 reduce/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 14 shift/reduce
State 54 conflicts: 14 shift/reduce
State 55 conflicts: 14 shift/reduce
State 96 conflicts: 1 shift/reduce
State 117 conflicts: 14 shift/reduce
State 118 conflicts: 14 shift/reduce
State 119 conflicts: 14 shift/reduce
State 120 conflicts: 14 shift/reduce
State 121 conflicts: 14 shift/reduce
State 123 conflicts: 14 shift/reduce
State 124 conflicts: 14 shift/reduce
State 125 conflicts: 14 shift/reduce
State 126 conflicts: 14 shift/reduce
State 127 conflicts: 14 shift/reduce
State 128 conflicts: 14 shift/reduce
State 129 conflicts: 14 shift/reduce
State 130 conflicts: 14 shift/reduce
State 139 conflicts: 3 shift/reduce
State 140 conflicts: 14 shift/reduce, 15 reduce/reduce
State 141 conflicts: 14 shift/reduce, 15 reduce/reduce
State 148 conflicts: 14 shift/reduce
State 163 conflicts: 3 shift/reduce, 22 reduce/reduce


Grammar

    0 $accept: source $end

    1 source: %empty
    2       | source sourceItem

    3 sourceItem: DEF funcSignature listStatement END

    4 listSourceItem: sourceItem listSourceItem
    5               | %empty

    6 funcSignature: IDENTIFIER LPAREN listArgDef RPAREN optionalTypeRef

    7 listArgDef: %empty
    8           | argDef
    9           | argDef COMMA listArgDef

   10 argDef: IDENTIFIER optionalTypeRef

   11 optionalTypeRef: %empty
   12                | LPAREN OF typeRef RPAREN

   13 typeRef: builtin
   14        | custom
   15        | array

   16 builtin: TYPEDEF

   17 statement: var
   18          | if
   19          | loop
   20          | repeat
   21          | block
   22          | break
   23          | expression

   24 listStatement: statement listStatement
   25              | %empty

   26 custom: IDENTIFIER

   27 array: typeRef ARRAY LBRACKET DEC RBRACKET

   28 if: IF expr THAN statement optionalElseStatement

   29 optionalElseStatement: ELSE statement optionalElseStatement
   30                      | ELSE statement
   31                      | %empty

   32 block: LBRACE listStatement RBRACE
   33      | BEGIN_BLOCK listStatement END
   34      | LBRACE listSourceItem RBRACE
   35      | BEGIN_BLOCK listSourceItem END
   36      | LBRACE RBRACE
   37      | BEGIN_BLOCK END

   38 loop: WHILE expr listStatement END
   39     | UNTIL expr listStatement END

   40 repeat: statement WHILE expr SEMICOLON
   41       | statement UNTIL expr SEMICOLON

   42 break: BREAK SEMICOLON

   43 expression: expr SEMICOLON

   44 assignment: expr EQUAL expr

   45 expr: unary
   46     | binary
   47     | braces
   48     | call
   49     | slice
   50     | place
   51     | literal

   52 binary: assignment
   53       | expr PLUS expr
   54       | expr MINUS expr
   55       | expr STAR expr
   56       | expr SLASH expr
   57       | expr PERCENT expr
   58       | expr EQUAL EQUAL expr
   59       | expr NOTEQUAL expr
   60       | expr LESSTHAN expr
   61       | expr GREATERTHAN expr
   62       | expr LESSTHANEQ expr
   63       | expr GREATERTHANEQ expr
   64       | expr AND expr
   65       | expr OR expr

   66 unary: PLUS expr
   67      | MINUS expr
   68      | NOT expr

   69 braces: LPAREN expr RPAREN

   70 call: IDENTIFIER LPAREN optionalListExpr RPAREN

   71 optionalListExpr: listExpr
   72                 | %empty

   73 listExpr: expr COMMA listExpr
   74         | expr

   75 slice: expr LBRACKET listRange RBRACKET

   76 range: expr DOUBLE_DOT expr
   77      | expr

   78 listRange: range COMMA listRange
   79          | range

   80 place: IDENTIFIER

   81 literal: TRUE
   82        | FALSE
   83        | STR
   84        | CHAR
   85        | HEX
   86        | BIN
   87        | DEC

   88 listVarDeclared: listVarDeclaredItem COMMA listVarDeclared
   89                | listVarDeclaredItem

   90 listVarDeclaredItem: IDENTIFIER
   91                    | assignment

   92 var: typeRef listVarDeclared SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS <node> (258) 53 66
    MINUS <node> (259) 54 67
    STAR <node> (260) 55
    SLASH <node> (261) 56
    PERCENT <node> (262) 57
    EQUAL <node> (263) 44 58
    NOTEQUAL <node> (264) 59
    LESSTHAN <node> (265) 60
    GREATERTHAN <node> (266) 61
    LESSTHANEQ <node> (267) 62
    GREATERTHANEQ <node> (268) 63
    AND <node> (269) 64
    OR <node> (270) 65
    NOT <node> (271) 68
    OF <node> (272) 12
    ARRAY <node> (273) 27
    DEF <node> (274) 3
    END <node> (275) 3 33 35 37 38 39
    BEGIN_BLOCK <node> (276) 33 35 37
    IDENTIFIER <node> (277) 6 10 26 70 80 90
    STR <node> (278) 83
    COMMA <node> (279) 9 73 78 88
    DOUBLE_DOT <node> (280) 76
    CHAR <node> (281) 84
    BIN <node> (282) 86
    HEX <node> (283) 85
    DEC <node> (284) 27 87
    TRUE <node> (285) 81
    FALSE <node> (286) 82
    IF <node> (287) 28
    ELSE <node> (288) 29 30
    THAN <node> (289) 28
    WHILE <node> (290) 38 40
    UNTIL <node> (291) 39 41
    DO <node> (292)
    BREAK <node> (293) 42
    SEMICOLON <node> (294) 40 41 42 43 92
    LPAREN <node> (295) 6 12 69 70
    RPAREN <node> (296) 6 12 69 70
    LBRACE <node> (297) 32 34 36
    RBRACE <node> (298) 32 34 36
    LBRACKET <node> (299) 27 75
    RBRACKET <node> (300) 27 75
    TYPEDEF <node> (301) 16
    ARRAY_COMMAS <node> (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    source <node> (49)
        on left: 1 2
        on right: 0 2
    sourceItem <node> (50)
        on left: 3
        on right: 2 4
    listSourceItem <node> (51)
        on left: 4 5
        on right: 4 34 35
    funcSignature <node> (52)
        on left: 6
        on right: 3
    listArgDef <node> (53)
        on left: 7 8 9
        on right: 6 9
    argDef <node> (54)
        on left: 10
        on right: 8 9
    optionalTypeRef <node> (55)
        on left: 11 12
        on right: 6 10
    typeRef <node> (56)
        on left: 13 14 15
        on right: 12 27 92
    builtin <node> (57)
        on left: 16
        on right: 13
    statement <node> (58)
        on left: 17 18 19 20 21 22 23
        on right: 24 28 29 30 40 41
    listStatement <node> (59)
        on left: 24 25
        on right: 3 24 32 33 38 39
    custom <node> (60)
        on left: 26
        on right: 14
    array <node> (61)
        on left: 27
        on right: 15
    if <node> (62)
        on left: 28
        on right: 18
    optionalElseStatement <node> (63)
        on left: 29 30 31
        on right: 28 29
    block <node> (64)
        on left: 32 33 34 35 36 37
        on right: 21
    loop <node> (65)
        on left: 38 39
        on right: 19
    repeat <node> (66)
        on left: 40 41
        on right: 20
    break <node> (67)
        on left: 42
        on right: 22
    expression <node> (68)
        on left: 43
        on right: 23
    assignment <node> (69)
        on left: 44
        on right: 52 91
    expr <node> (70)
        on left: 45 46 47 48 49 50 51
        on right: 28 38 39 40 41 43 44 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 73 74 75 76 77
    binary <node> (71)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 46
    unary <node> (72)
        on left: 66 67 68
        on right: 45
    braces <node> (73)
        on left: 69
        on right: 47
    call <node> (74)
        on left: 70
        on right: 48
    optionalListExpr <node> (75)
        on left: 71 72
        on right: 70
    listExpr <node> (76)
        on left: 73 74
        on right: 71 73
    slice <node> (77)
        on left: 75
        on right: 49
    range <node> (78)
        on left: 76 77
        on right: 78 79
    listRange <node> (79)
        on left: 78 79
        on right: 75 78
    place <node> (80)
        on left: 80
        on right: 50
    literal <node> (81)
        on left: 81 82 83 84 85 86 87
        on right: 51
    listVarDeclared <node> (82)
        on left: 88 89
        on right: 88 92
    listVarDeclaredItem <node> (83)
        on left: 90 91
        on right: 88 89
    var <node> (84)
        on left: 92
        on right: 17


State 0

    0 $accept: . source $end

    $default  reduce using rule 1 (source)

    source  go to state 1


State 1

    0 $accept: source . $end
    2 source: source . sourceItem

    $end  shift, and go to state 2
    DEF   shift, and go to state 3

    sourceItem  go to state 4


State 2

    0 $accept: source $end .

    $default  accept


State 3

    3 sourceItem: DEF . funcSignature listStatement END

    IDENTIFIER  shift, and go to state 5

    funcSignature  go to state 6


State 4

    2 source: source sourceItem .

    $default  reduce using rule 2 (source)


State 5

    6 funcSignature: IDENTIFIER . LPAREN listArgDef RPAREN optionalTypeRef

    LPAREN  shift, and go to state 7


State 6

    3 sourceItem: DEF funcSignature . listStatement END

    PLUS         shift, and go to state 8
    MINUS        shift, and go to state 9
    NOT          shift, and go to state 10
    BEGIN_BLOCK  shift, and go to state 11
    IDENTIFIER   shift, and go to state 12
    STR          shift, and go to state 13
    CHAR         shift, and go to state 14
    BIN          shift, and go to state 15
    HEX          shift, and go to state 16
    DEC          shift, and go to state 17
    TRUE         shift, and go to state 18
    FALSE        shift, and go to state 19
    IF           shift, and go to state 20
    WHILE        shift, and go to state 21
    UNTIL        shift, and go to state 22
    BREAK        shift, and go to state 23
    LPAREN       shift, and go to state 24
    LBRACE       shift, and go to state 25
    TYPEDEF      shift, and go to state 26

    $default  reduce using rule 25 (listStatement)

    typeRef        go to state 27
    builtin        go to state 28
    statement      go to state 29
    listStatement  go to state 30
    custom         go to state 31
    array          go to state 32
    if             go to state 33
    block          go to state 34
    loop           go to state 35
    repeat         go to state 36
    break          go to state 37
    expression     go to state 38
    assignment     go to state 39
    expr           go to state 40
    binary         go to state 41
    unary          go to state 42
    braces         go to state 43
    call           go to state 44
    slice          go to state 45
    place          go to state 46
    literal        go to state 47
    var            go to state 48


State 7

    6 funcSignature: IDENTIFIER LPAREN . listArgDef RPAREN optionalTypeRef

    IDENTIFIER  shift, and go to state 49

    $default  reduce using rule 7 (listArgDef)

    listArgDef  go to state 50
    argDef      go to state 51


State 8

   66 unary: PLUS . expr

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 53
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 9

   67 unary: MINUS . expr

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 54
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 10

   68 unary: NOT . expr

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 55
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 11

   33 block: BEGIN_BLOCK . listStatement END
   35      | BEGIN_BLOCK . listSourceItem END
   37      | BEGIN_BLOCK . END

    PLUS         shift, and go to state 8
    MINUS        shift, and go to state 9
    NOT          shift, and go to state 10
    DEF          shift, and go to state 3
    END          shift, and go to state 56
    BEGIN_BLOCK  shift, and go to state 11
    IDENTIFIER   shift, and go to state 12
    STR          shift, and go to state 13
    CHAR         shift, and go to state 14
    BIN          shift, and go to state 15
    HEX          shift, and go to state 16
    DEC          shift, and go to state 17
    TRUE         shift, and go to state 18
    FALSE        shift, and go to state 19
    IF           shift, and go to state 20
    WHILE        shift, and go to state 21
    UNTIL        shift, and go to state 22
    BREAK        shift, and go to state 23
    LPAREN       shift, and go to state 24
    LBRACE       shift, and go to state 25
    TYPEDEF      shift, and go to state 26

    END  [reduce using rule 5 (listSourceItem)]
    END  [reduce using rule 25 (listStatement)]

    sourceItem      go to state 57
    listSourceItem  go to state 58
    typeRef         go to state 27
    builtin         go to state 28
    statement       go to state 29
    listStatement   go to state 59
    custom          go to state 31
    array           go to state 32
    if              go to state 33
    block           go to state 34
    loop            go to state 35
    repeat          go to state 36
    break           go to state 37
    expression      go to state 38
    assignment      go to state 39
    expr            go to state 40
    binary          go to state 41
    unary           go to state 42
    braces          go to state 43
    call            go to state 44
    slice           go to state 45
    place           go to state 46
    literal         go to state 47
    var             go to state 48


State 12

   26 custom: IDENTIFIER .
   70 call: IDENTIFIER . LPAREN optionalListExpr RPAREN
   80 place: IDENTIFIER .

    LPAREN  shift, and go to state 60

    PLUS        reduce using rule 26 (custom)
    PLUS        [reduce using rule 80 (place)]
    MINUS       reduce using rule 26 (custom)
    MINUS       [reduce using rule 80 (place)]
    NOT         reduce using rule 26 (custom)
    ARRAY       reduce using rule 26 (custom)
    IDENTIFIER  reduce using rule 26 (custom)
    STR         reduce using rule 26 (custom)
    CHAR        reduce using rule 26 (custom)
    BIN         reduce using rule 26 (custom)
    HEX         reduce using rule 26 (custom)
    DEC         reduce using rule 26 (custom)
    TRUE        reduce using rule 26 (custom)
    FALSE       reduce using rule 26 (custom)
    LPAREN      [reduce using rule 26 (custom)]
    $default    reduce using rule 80 (place)


State 13

   83 literal: STR .

    $default  reduce using rule 83 (literal)


State 14

   84 literal: CHAR .

    $default  reduce using rule 84 (literal)


State 15

   86 literal: BIN .

    $default  reduce using rule 86 (literal)


State 16

   85 literal: HEX .

    $default  reduce using rule 85 (literal)


State 17

   87 literal: DEC .

    $default  reduce using rule 87 (literal)


State 18

   81 literal: TRUE .

    $default  reduce using rule 81 (literal)


State 19

   82 literal: FALSE .

    $default  reduce using rule 82 (literal)


State 20

   28 if: IF . expr THAN statement optionalElseStatement

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 61
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 21

   38 loop: WHILE . expr listStatement END

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 62
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 22

   39 loop: UNTIL . expr listStatement END

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 63
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 23

   42 break: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 24

   69 braces: LPAREN . expr RPAREN

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 52
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment  go to state 39
    expr        go to state 65
    binary      go to state 41
    unary       go to state 42
    braces      go to state 43
    call        go to state 44
    slice       go to state 45
    place       go to state 46
    literal     go to state 47


State 25

   32 block: LBRACE . listStatement RBRACE
   34      | LBRACE . listSourceItem RBRACE
   36      | LBRACE . RBRACE

    PLUS         shift, and go to state 8
    MINUS        shift, and go to state 9
    NOT          shift, and go to state 10
    DEF          shift, and go to state 3
    BEGIN_BLOCK  shift, and go to state 11
    IDENTIFIER   shift, and go to state 12
    STR          shift, and go to state 13
    CHAR         shift, and go to state 14
    BIN          shift, and go to state 15
    HEX          shift, and go to state 16
    DEC          shift, and go to state 17
    TRUE         shift, and go to state 18
    FALSE        shift, and go to state 19
    IF           shift, and go to state 20
    WHILE        shift, and go to state 21
    UNTIL        shift, and go to state 22
    BREAK        shift, and go to state 23
    LPAREN       shift, and go to state 24
    LBRACE       shift, and go to state 25
    RBRACE       shift, and go to state 66
    TYPEDEF      shift, and go to state 26

    RBRACE  [reduce using rule 5 (listSourceItem)]
    RBRACE  [reduce using rule 25 (listStatement)]

    sourceItem      go to state 57
    listSourceItem  go to state 67
    typeRef         go to state 27
    builtin         go to state 28
    statement       go to state 29
    listStatement   go to state 68
    custom          go to state 31
    array           go to state 32
    if              go to state 33
    block           go to state 34
    loop            go to state 35
    repeat          go to state 36
    break           go to state 37
    expression      go to state 38
    assignment      go to state 39
    expr            go to state 40
    binary          go to state 41
    unary           go to state 42
    braces          go to state 43
    call            go to state 44
    slice           go to state 45
    place           go to state 46
    literal         go to state 47
    var             go to state 48


State 26

   16 builtin: TYPEDEF .

    $default  reduce using rule 16 (builtin)


State 27

   27 array: typeRef . ARRAY LBRACKET DEC RBRACKET
   92 var: typeRef . listVarDeclared SEMICOLON

    PLUS        shift, and go to state 8
    MINUS       shift, and go to state 9
    NOT         shift, and go to state 10
    ARRAY       shift, and go to state 69
    IDENTIFIER  shift, and go to state 70
    STR         shift, and go to state 13
    CHAR        shift, and go to state 14
    BIN         shift, and go to state 15
    HEX         shift, and go to state 16
    DEC         shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    LPAREN      shift, and go to state 24

    assignment           go to state 71
    expr                 go to state 72
    binary               go to state 41
    unary                go to state 42
    braces               go to state 43
    call                 go to state 44
    slice                go to state 45
    place                go to state 46
    literal              go to state 47
    listVarDeclared      go to state 73
    listVarDeclaredItem  go to state 74


State 28

   13 typeRef: builtin .

    $default  reduce using rule 13 (typeRef)


State 29

   24 listStatement: statement . listStatement
   40 repeat: statement . WHILE expr SEMICOLON
   41       | statement . UNTIL expr SEMICOLON

    PLUS         shift, and go to state 8
    MINUS        shift, and go to state 9
    NOT          shift, and go to state 10
    BEGIN_BLOCK  shift, and go to state 11
    IDENTIFIER   shift, and go to state 12
    STR          shift, and go to state 13
    CHAR         shift, and go to state 14
    BIN          shift, and go to state 15
    HEX          shift, and go to state 16
    DEC          shift, and go to state 17
    TRUE         shift, and go to state 18
    FALSE        shift, and go to state 19
    IF           shift, and go to state 20
    WHILE        shift, and go to state 75
    UNTIL        shift, and go to state 76
    BREAK        shift, and go to state 23
    LPAREN       shift, and go to state 24
    LBRACE       shift, and go to state 25
    TYPEDEF      shift, and go to state 26

    $default  reduce using rule 25 (listStatement)

    typeRef        go to state 27
    builtin        go to state 28
    statement      go to state 29
    listStatement  go to state 77
    custom         go to state 31
    array          go to state 32
    if             go to state 33
    block          go to state 34
    loop           go to state 35
    repeat         go to state 36
    break          go to state 37
    expression     go to state 38
    assignment     go to state 39
    expr           go to state 40
    binary         go to state 41
    unary          go to state 42
    braces         go to state 43
    call           go to state 44
    slice          go to state 45
    place          go to state 46
    literal        go to state 47
    var            go to state 48


State 30

    3 sourceItem: DEF funcSignature listStatement . END

    END  shift, and go to state 78


State 31

   14 typeRef: custom .

    $default  reduce using rule 14 (typeRef)


State 32

   15 typeRef: array .

    $default  reduce using rule 15 (typeRef)


State 33

   18 statement: if .

    $default  reduce using rule 18 (statement)


State 34

   21 statement: block .

    $default  reduce using rule 21 (statement)


State 35

   19 statement: loop .

    $default  reduce using rule 19 (statement)


State 36

   20 statement: repeat .

    $default  reduce using rule 20 (statement)


State 37

   22 statement: break .

    $default  reduce using rule 22 (statement)


State 38

   23 statement: expression .

    $default  reduce using rule 23 (statement)


State 39

   52 binary: assignment .

    $default  reduce using rule 52 (binary)


State 40
